[tool.poetry]
name = "repl_python3_Barack-Obama"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
Flask = "^2.0.1"
xmltodict = "^0.12.0"
psutil = "^5.8.0"
google = "^3.0.0"
googlesearch-python = "^1.0.1"
SSIM-PIL = "^1.0.13"
replit = "^3.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
